# django-convenient-formsets

./: .eslintrc.json  .gitignore  CHANGES.md  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish_package.yml  run_end_to_end_tests.yml  run_js_tests.yml  run_linters.yml  run_python_unit_tests.yml  run_style_checks.yml
convenient_formsets/: __init__.py  apps.py  formsets.py
convenient_formsets/static/: .eslintrc.json
convenient_formsets/static/convenient_formsets/: convenient_formsets.js
js_tests/: fixtures.js  test_add_remove_formsets.js  test_initialization.js
py_tests/django_test_project/: settings.py  urls.py  views.py
py_tests/django_test_project/templates/: 404.html  base.html
py_tests/django_test_project/templates/adding_removing_forms/: adding_form_1.html  adding_form_2.html  adding_form_3.html  deleting_form_1.html
py_tests/django_test_project/templates/initialization/: hiding_add_form_button_1.html  hiding_add_form_button_2.html  hiding_add_form_button_base.html  hiding_deleted_forms_1.html  hiding_deleted_forms_2.html  hiding_deleted_forms_base.html  malformed_empty_form_template.html  missing_formset_elements.html  missing_formset_elements1.html  missing_formset_elements2.html  missing_formset_elements3.html  missing_formset_elements_1.html  missing_formset_elements_2.html  missing_formset_elements_3.html  missing_options.html  (+4 more)
py_tests/end_to_end_tests/: conftest.py  test_adding_removing_forms.py  test_initialization.py  test_interaction.py
py_tests/unit_tests/: test_formsets.py
(+11 files in other folders)
