[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
atomic = true
case_sensitive = true
combine_as_imports = true
line_length = 88
skip_gitignore = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
namespace_packages = false
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pylint."MESSAGES CONTROL"]
disable=[
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "no-member",
    "too-few-public-methods",
    "too-many-ancestors",
]

[tool.pylint."FORMAT"]
max-line-length=88
